# rustyPixelGameEngine

./: Cargo.toml  LICENSE.md  TODO.md  readme.md
.cargo/: config
examples/: circle.rs  cube.rs  dda.rs  decal.rs  extensiontestgfx2d.rs  font.rs  line.rs  rect.rs  sprite.rs  sprite_transform.rs  triangle.rs
src/: color.rs  decal.rs  gfx2d.rs  gfx3d.rs  layer.rs  lib.rs  renderable.rs  sprite.rs  time.rs  v2d.rs
src/gfx2d/: vec2d.rs
src/gfx3d/: mat4x4.rs  pipeline.rs  plane.rs  triangle.rs  vec3d.rs  vec4d.rs
