[package]
name = "pge"
version = "0.1.0"
authors = ["Matt"]
edition = "2018"
description = "A port of olcPixelGameEngine to Rust, a tool used in javidx9's YouTube videos and projects."
license-file = "LICENSE.md"

[dependencies]
minifb = "0.15.3"
image = "0.22.4"
num-traits = "0.2.14"

[dev-dependencies]
rand = "0.8.4"
image = "0.22.4"
rustfix = "0.6.0"
