[package]
name = "pge"
version = "0.1.0"
authors = ["Matt"]
edition = "2021"
description = "A port of olcPixelGameEngine to Rust, a tool used in javidx9's YouTube videos and projects."
license-file = "LICENSE.md"

[dependencies]
miniquad = { version = "0.4.0-alpha.10" }
glam = "0.25.0"
image = "0.24"

[dev-dependencies]
rand = "0.8"
image = "0.24"
